# Vexillum

./: .gitignore  CMakeLists.txt  README.md
demo/css/: main.css  skeleton.css
docs/: index.html  main.js
docs/css/: main.css
src/: ArgumentHandler.c  ArgumentHandler.h  CMakeLists.txt  ErrorHandler.c  ErrorHandler.h  FlagHandler.c  FlagHandler.h  LinkedList.c  LinkedList.h  StringLinkedList.c  StringLinkedList.h  Vexillum.c  Vexillum.h  library.c  library.h
src/error/: ErrorDefinitions.c  ErrorDefinitions.h  ErrorHandler.c  ErrorHandler.h
src/util/: LinkedList.c  LinkedList.h
test/: Arguments.c  CMakeLists.txt  ErrorString.c  Flag.c  Main.c  main.c
